[tool.poetry]
name = "electronic-hardware-system-design"
version = "1.0.0"
description = ""
authors = ["andreasp <andreas@pedersenmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
jupyterlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
